--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           declare -A sources=(
             ["mosdns_adrules.txt"]="https://raw.githubusercontent.com/Cats-Team/AdRules/main/mosdns_adrules.txt|s/^domain://g"
-            ["domains.txt"]="https://anti-ad.net/domains.txt"
+            ["domains.txt"]="https://anti-ad.net/domains.txt|"
             ["dns.txt"]="https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/dns.txt|s/^\|\|//;s/\^$//"
-            ["adblockdomain.txt"]="https://raw.githubusercontent.com/217heidai/adblockfilters/main/rules/adblockdomain.txt"
+            ["adblockdomain.txt"]="https://raw.githubusercontent.com/217heidai/adblockfilters/main/rules/adblockdomain.txt|"
           )
 
           for file in "${!sources[@]}"; do
@@ -39,8 +39,12 @@ jobs:
               exit 1
             fi
             
-            # 应用过滤：移除注释行 + 特定格式处理
-            sed "${filters:-/^\s*$/d}" "$file.raw" | grep -v '^[!#]' > "$file.processed"
+            # 如果 filters 为空，则只删除空行，否则应用指定的过滤规则
+            if [ -z "$filters" ]; then
+              sed '/^\s*$/d' "$file.raw" | grep -v '^[!#]' > "$file.processed"
+            else
+              sed "$filters" "$file.raw" | grep -v '^[!#]' > "$file.processed"
+            fi
           done
         working-directory: tmp
 
