--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # 更新到最新版本
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -26,7 +26,7 @@ jobs:
             ["mosdns_adrules.txt"]="https://raw.githubusercontent.com/Cats-Team/AdRules/main/mosdns_adrules.txt|s/^domain://g"
             ["domains.txt"]="https://anti-ad.net/domains.txt|"
             ["dns.txt"]="https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/dns.txt|s/^\|\|//;s/\^$//"
-            ["adblockdomain.txt"]="https://raw.githubusercontent.com/217heidai/adblockfilters/main/rules/adblockdomainlite.txt|"
+            ["adblockdomain.txt"]="https://raw.githubusercontent.com/217heidai/adblockfilters/main/rules/adblockdomain.txt|"
           )
 
           for file in "${!sources[@]}"; do
@@ -40,10 +40,11 @@ jobs:
             fi
             
             # 如果 filters 为空，则只删除空行，否则应用指定的过滤规则
+            # 只保留以字母或数字开头的行
             if [ -z "$filters" ]; then
-              sed '/^\s*$/d' "$file.raw" | grep -v '^[!#]' > "$file.processed"
+              sed '/^\s*$/d' "$file.raw" | grep '^[[:alnum:]]' > "$file.processed"
             else
-              sed "$filters" "$file.raw" | grep -v '^[!#]' > "$file.processed"
+              sed "$filters" "$file.raw" | grep '^[[:alnum:]]' > "$file.processed"
             fi
           done
         working-directory: tmp
@@ -55,7 +56,7 @@ jobs:
         working-directory: tmp
 
       - name: Clean up temporary files
-        if: always()  # 确保即使失败也执行清理
+        if: always()
         run: rm -rf tmp
 
       - name: Commit changes
